--- a/trunk/netpanzer/docs/netpanzer.6
+++ b/trunk/netpanzer/docs/netpanzer.6
@@ -1,4 +1,4 @@
-.TH "netpanzer" "6" "0.1.2" "Bartosz Fenski <fenio@o2.pl>" "Games"
+.TH "netpanzer" "6" "0.1.3" "Bartosz Fenski <fenio@o2.pl>" "Games"
 .SH "NAME"
 netPanzer \- an online multiplayer tactical warfare game
 .SH "SYNTAX"
@@ -29,8 +29,11 @@ The following options are supported.
 .B -h, --help
 show usage instructions.
 .TP
-.B --version
+.B     --version
 show version information.
+.TP
+.B -c, --connect=VALUE
+directly connect to the specified server.
 .TP
 .B -d, --dedicated
 run as dedicated server.
@@ -38,12 +41,15 @@ run as dedicated server.
 .B -b, --bot=VALUE
 connect as bot to specific server.
 .TP
+.B -p, --port=VALUE
+run server on specified port.
+.TP
 .B -g, --debug
 enable debug output.
 .B     --lobby-server=VALUE
 Use the specified irc server as lobby server. You can use 'none' to
 disable lobby announcement.
-.B -c, --game_config=VALUE
+.B     --game_config=VALUE
 Use the specified file as config file. The file will be read from the netpanzer
 config directory (ie. ~/.netpanzer/config)
 .PD
