-tried to fix problems on alpha64 build and made ReadFile::read and  FileWrite::write return exceptions

--- a/trunk/netpanzer/ChangeLog
+++ b/trunk/netpanzer/ChangeLog
@@ -2,6 +2,8 @@
 -applied a bunch of endianess patches from Hollis Blanchard
 -added doxygen comments to Endian.hpp and did a few other fixes/style
  improvements
+-tried to fix problems on alpha64 build and made ReadFile::read and
+ FileWrite::write return exceptions
     
 1-Mar-2004 by Matthias Braun
 -applied some fixes to Jamfiles (thanks Hollis Blanchard)
