--- a/trunk/netpanzer/TODO
+++ b/trunk/netpanzer/TODO
@@ -1,76 +1,75 @@
 *** Lobby Code
--use new more stable IRC code from Lib/IRC
+ * use new more stable IRC code from Lib/IRC
 
 *** Improvements
--let dedicated server output statistics on console or in some log files. So that
- you can generate nice html pages with statistics of the players :)
--Convert the 256 color stuff to truecolor
--Add timeout/keepalive handling to network layer to correctly detect connection
- losses and try reconnects (we should think about this again, doesn't TCP
- already do similar things?)
--impelement 'initialunits' param in PlayerUnitConfig::initialize()
--bots should have different names and different flags - partly implemented
--the collection of flags has to be the same on all clients at the moment. This
-should be changed (clients should send the name of their flag). The collest
-solution would be transfering of unknown flags.
--make it possible to have different colors for different players - DONE
--make the code endian safe. It should run on big endian boxes too.
--display alliances in the status screens.
--dedicated server should prefix all messages with timestamps
+ * let dedicated server output statistics on console or in some log files. 
+   So that you can generate nice html pages with statistics of the players :)
+ * Convert the 256 color stuff to truecolor
+ * Add timeout/keepalive handling to network layer to correctly detect 
+   connection losses and try reconnects (we should think about this again, 
+   doesn't TCP already do similar things?)
+ * impelement 'initialunits' param in PlayerUnitConfig::initialize()
+ * bots should have different names and different flags - partly implemented
+ * the collection of flags has to be the same on all clients at the moment. 
+   This should be changed (clients should send the name of their flag). 
+   The collest solution would be transfering of unknown flags.
+ * make it possible to have different colors for different players - DONE
+ * make the code endian safe. It should run on big endian boxes too.
+ * display alliances in the status screens.
+ * dedicated server should prefix all messages with timestamps
+ * dedicated server should allow saying something to every user... I mean
+   I would like to have possibility to say "hello guys... sorry has to
+   shutdown server because of sth"
 
 *** Tools
--write a map and tileset editor
--tool for changing the (server?) configuration
+ * write a map and tileset editor
+ * tool for changing the (server?) configuration
 
 *** Feature Additions
-
--Display tip of the day while loading the map.
--Improve userinterface:
-        * Make usual shortcuts (known from other RTSes) work:
-            -CTRL+Number for defining groups - done
-            -Scroll map with right mouse - done
-            -scrolling map with cursor keys
-            -Space jumps to last action - done
-            -a key to cycle through all (offline) outposts
-            -add possibilty for setting waypoints (ALT+leftclick?)
-            -...
-        * Create a nice static! skin which is at the bottom of the screen
-          and combines a map, statusdisplay of selected units and outpost
-          buildmenu
-        * Redesign menus and UI code (use new font code, sfont or freefont
-          maybe?)
--Build additional tools:
-        * Build a map and tileset editor (That's what I'm up to at the
-          moment)
--Create possibilities to save and play replays of the matches
--Create possibility to save and restore matches
--Convert the 256 color stuff to truecolor and eventually use opengl for
- displaying stuff.
--add code for masterserver registration/browsing (this would be additional to
-        the irc lobby code, so that we could get integration into server
-        browsing tools like xqf done eventually)
--create UDP broadcast code for announcing servers in LANs
--add a (readline based?) serverconsole
+ * Display tip of the day while loading the map.
+ * Improve userinterface:
+ * Make usual shortcuts (known from other RTSes) work:
+  -CTRL+Number for defining groups - done
+  -Scroll map with right mouse - done
+  -scrolling map with cursor keys
+  -Space jumps to last action - done
+  -a key to cycle through all (offline) outposts
+  -add possibilty for setting waypoints (ALT+leftclick?)
+  -...
+ * Create a nice static! skin which is at the bottom of the screen
+   and combines a map, statusdisplay of selected units and outpost buildmenu
+ * Redesign menus and UI code (use new font code, sfont or freefont maybe?)
+ * Build additional tools:
+  -Build a map and tileset editor (That's what I'm up to at the moment)
+ * Create possibilities to save and play replays of the matches
+ * Create possibility to save and restore matches
+ * Convert the 256 color stuff to truecolor and eventually use opengl for
+   displaying stuff.
+ * add code for masterserver registration/browsing (this would be additional to
+   the irc lobby code, so that we could get integration into server
+   browsing tools like xqf done eventually)
+ * create UDP broadcast code for announcing servers in LANs
+ * add a (readline based?) serverconsole
 
 *** gameplay
-Note that these are just random idea. We should be very careful when tuning the
-gameplay. 1 of the strengths of netpanzer is that it is simple to understand
-andplay. We should try hard not to destroy this by adding too many options.
-
--Add a mode where nothing is produced (maps without outposts). Players can
- select some tanks based on a points system and can then fight with this fixed
- amount of tanks
--Add different types of outposts. (only selected types of panzers, possibility
-        to repair units at helipad, ...)
--Add possibilities to repair units (helipad at outpost or repair tank)
--Add fog of war (eventually with special things like radar jammers or radar
-        tanks?)
--add infantry? anti-tank style ones, and anti-infantry ones?
--different terrain types (some terrain where you can move slower) maybe also
- with a heightmap.
--more map elements? bridges that can be destroyed (and repaired?)
--a unit that can deploy mines
--special game modes and objectives? capture the flag or "escort a VIP", or
- defend an objective would be things that come to mind
--make panzers always hit their targets instead of missing moving units?
+/ Note that these are just random idea. We should be very careful when 
+/ tuning the gameplay. 1 of the strengths of netpanzer is that it is simple 
+/ to understand and play. We should try hard not to destroy this by adding 
+/ too many options.
+ * Add a mode where nothing is produced (maps without outposts). Players can
+   select some tanks based on a points system and can then fight with this fixed
+   amount of tanks
+ * Add different types of outposts. (only selected types of panzers, 
+   possibility to repair units at helipad, ...)
+ * Add possibilities to repair units (helipad at outpost or repair tank)
+ * Add fog of war (eventually with special things like radar jammers 
+   or radar tanks?)
+ * add infantry? anti-tank style ones, and anti-infantry ones?
+ * different terrain types (some terrain where you can move slower) maybe also
+   with a heightmap.
+ * more map elements? bridges that can be destroyed (and repaired?)
+ * a unit that can deploy mines
+ * special game modes and objectives? capture the flag or "escort a VIP", or
+   defend an objective would be things that come to mind
+ * make panzers always hit their targets instead of missing moving units?
 
