--- a/trunk/netpanzer/TODO
+++ b/trunk/netpanzer/TODO
@@ -34,7 +34,12 @@
   -Space jumps to last action - done
   -a key to cycle through all (offline) outposts
   -add possibilty for setting waypoints (ALT+leftclick?)
+  -add possibility to set markers for allies
+  -double clicking on a unit marks all units of the same type on screen
+    (tripple clicking marks all units of this type on the map?)
   -...
+ * Display targets of marked players with lines (ie. a green line if the panzer
+   is moving, a red line if it is attacking some point)
  * Create a nice static! skin which is at the bottom of the screen
    and combines a map, statusdisplay of selected units and outpost buildmenu
  * Redesign menus and UI code (use new font code, sfont or freefont maybe?)
