--- a/trunk/netpanzer/TODO
+++ b/trunk/netpanzer/TODO
@@ -13,9 +13,8 @@
    doesn't TCP already do similar things?)
  * impelement 'initialunits' param in PlayerUnitConfig::initialize()
  * bots should have different names and different flags - partly implemented
- * the collection of flags has to be the same on all clients at the moment. 
-   This should be changed (clients should send the name of their flag). 
-   The collest solution would be transfering of unknown flags.
+ * synchronize resources between server and clients, both should have same flags
+   collection and map. Let them automatically download these things.
  * make it possible to have different colors for different players - DONE
  * make the code endian safe. It should run on big endian boxes too.
  * display alliances in the status screens.
