updated contact information... there were still info on savannah

--- a/trunk/netpanzer/README
+++ b/trunk/netpanzer/README
@@ -186,9 +186,9 @@ netpanzer
 
 6. Contact
 
-Bugs should be reported to the bug trackker on savannah:
-    https://savannah.nongnu.org/bugs/?group=netpanzer
-You can contact us at the netpanzer-devel mailinglist at Savannah:
-    http://mail.nongnu.org/mailman/listinfo/netpanzer-devel
+Bugs should be reported to the bug trackker on Berlios:
+    http://developer.berlios.de/bugs/?group_id=1250
+You can contact us at the netpanzer-devel mailinglist at Berlios:
+    https://lists.berlios.de/mailman/listinfo/netpanzer-devel
 or you might be able to catch us in irc at irc.freenode.net #netpanzer.
 
