-started work on new serverbrowsing window -nearly eleminated deprecated UtilInterface class

--- a/trunk/netpanzer/ChangeLog
+++ b/trunk/netpanzer/ChangeLog
@@ -1,3 +1,7 @@
+07-Mai-2004 by Matthias Braun
+-started work on new serverbrowsing window
+-nearly eleminated deprecated UtilInterface class
+
 04-Mai-2004 by Matthias Braun
 -fixed some gcc 3.4 issues and warnings
 -fixed some errors where nonpacked classes where used inside packed
