--- a/trunk/netpanzer/docs/netpanzer.6
+++ b/trunk/netpanzer/docs/netpanzer.6
@@ -42,7 +42,7 @@ run as dedicated server.
 connect as bot to specific server.
 .TP
 .B -p, --port=VALUE
-run server on specified port.
+run server on specified port. (the server uses TCP and UDP connections)
 .TP
 .B -g, --debug
 enable debug output.
