--- a/trunk/netpanzer/ChangeLog
+++ b/trunk/netpanzer/ChangeLog
@@ -1,3 +1,7 @@
+30-Jun-2004 by Matthias Braun
+-lots of warning fixes
+-improvements to the masterserver code
+
 04-Jun-2004 by Matthias Braun
 -applied KROM_X's patch, but revised the mainloop parts by moving
  handleSDLEvents to NetPanzer/System.
