--- a/trunk/netpanzer/TODO
+++ b/trunk/netpanzer/TODO
@@ -2,6 +2,8 @@ Next release:
 -playtesting+bugfixing
 -often when a server is started it is only listed in 1 masterserver
 -port/address bindings are not respected when sending to the masterserver
+-timeout message looks strange in server list view
+-win32 somtimes crashs in lobby window
 
 *** New Masterserver code
  * add new options to only show servers which are not empty, with a certain map
