--- a/trunk/netpanzer/TODO
+++ b/trunk/netpanzer/TODO
@@ -4,6 +4,10 @@ Next release:
 -port/address bindings are not respected when sending to the masterserver
 -timeout message looks strange in server list view
 -win32 somtimes crashs in lobby window
+-objective count is wrong in status window
+-with 75% objective setting you can win the Cramped with 2 outposts already
+ (which is only be 66% of all outposts)
+-after having a full nodelist the server is getting slow
 
 *** New Masterserver code
  * add new options to only show servers which are not empty, with a certain map
